<resources>
    <string name="app_name">turingAnswer</string>

    <string name="postavke_niza">Postavke niza</string>
    <string name="funkcije_prijelaza">Funkcije prijelaza</string>

    <string name="ulazni_niz">Ulazni niz:</string>
    <string name="prihvaceno_stanje">Prihvaćeno stanje:</string>
    <string name="prazno_mjesto">Prazno mjesto:</string>
    <string name="bezuvjetni_prijelaz">Bezuvjetni prijelaz:</string>

    <string name="provjeri">Provjeri</string>
    <string name="automat">Automat</string>
    <string name="simulacija">Simulacija</string>

    <string name="neispravan_unos">"Neispravan unos!"</string>
    <string name="nema_unosa">Nema unosa!</string>

    <string name="result">Rezultat</string>
    <string name="accepted">Niz prihvatljiv!</string>
    <string name="not_accepted">Niz nije prihvatljiv!</string>
    <string name="not_executable">Nije moguće izvršiti provjeru!</string>

    <string name="fill_all_fields">Popuniti sva polja!</string>
    <string name="wrong_move">Krivo definiran pomak!</string>
    <string name="no_rules">Nema funkcija prijelaza!</string>
    <string name="no_start_state">Ne postoji stanje q0!</string>

    <string name="start_simulation">Pokreni simulaciju</string>
    <string name="stop_simulation">Zaustavi simulaciju</string>
    <string name="reset">Reset</string>

    <string name="ok">Uredu</string>
    <string name="cancel">Odustani</string>
</resources>
